# systems_research_zhong

./: get_block0.sh  get_block1.sh  get_block2.sh  get_regs.sh  regs.txt  set.sh  set_block0.sh  set_regs.py  telnet  ultravisor_script.sh
print-lib/: Cargo.toml  openocd.cfg
print-lib/examples/: lib.rs
print-lib/src/: main.rs
stm32f4-bare-metal/: .gitignore
stm32f4-bare-metal/flash/: STM32F411VE_FLASH.ld
stm32f4-bare-metal/include/: startup_stm32f411xe.s  stm32f4xx.h  system_stm32f4xx.c
stm32f4-bare-metal/projects/: armf4.mk
stm32f4-bare-metal/projects/memwrite/: .gdbinit  makefile  memwrite.c
stm32f4-bare-metal/projects/memwrite/Debug/: memwrite.d  memwrite.elf  memwrite.lst  memwrite.map  system_stm32f4xx.d
stm32f4-bare-metal/projects/printlib/: makefile  openocd.cfg  print.c
stm32f4-bare-metal/projects/printlib/Debug/: print.d  print.elf  print.lst  print.map
stm32f4-bare-metal/projects/semihost_blink/: .gdbinit  README.md  makefile  openocd.cfg  semihost_blink.c
ultravisor/main/: a.out  test  test.c  ultravisor.c
ultravisor/main/a.out.dSYM/Contents/Resources/DWARF/: a.out
ultravisor/register_data/: program_0_registers.txt  program_1_registers.txt  regs.txt  temp_0.txt  temp_1.txt
ultravisor/script_lib/: get.sh  get_block0.sh  get_block1.sh  get_block2.sh  set_block0.sh  set_block1.sh  set_block2.sh  set_regs.py
