[package]
name = "part2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
compiler_builtins = "0.1.72"
heapless = "0.7.10"

[dependencies.stm32f4xx-hal]
version = "0.12"
features = ["rt", "stm32f411"] # replace the model of your microcontroller here

[dependencies.stm32f4]
version = "0.14.0"
features = ["stm32f411", "rt"]
